@@ -2,6 +2,8 @@ Package: R.rsp
 ==============
 
 Version: 0.19.7-9000 [2015-02-04]
+o Now all \VignetteKeyword{} entries inside a meta directives with
+  language 'R-vignette' are parsed into meta data field 'keywords'.
 o Added arguments 'header' and 'metadata' to compileMarkdown().
 o Now the processor function returned by findProcessor() passes
   meta data as a named list to the underlying compiler/processor.
